tdf#101204 make VDB return correct results for fractional periods.

Change-Id: I97f7ff5f0c632a2b2e0501919a4d0fc1414fa028